main page updated to fix overflow resizing
now with more bootstrap

--- a/frontEnd/src/components/Chat/Chat.scss
+++ b/frontEnd/src/components/Chat/Chat.scss
@@ -3,13 +3,12 @@
 .chat{
     display: flex;
     flex-direction: column;
-    max-height: 78vh;
-    flex: 1;
+    height: 100%;
 
     .chat-window{
         flex: 10;
         margin: 0px 0 10px;
-        overflow: auto;
+        overflow-y:scroll;
         // position: relative;
 
         .messages-list{
